Adding the configuration for SignalR Azure hosting

--- a/AngularChatroom/Properties/launchSettings.json
+++ b/AngularChatroom/Properties/launchSettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "environmentVariables": {
+   "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.Azure.SignalR"
+ },
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
