--- a/AngularChatroom/appsettings.Development.json
+++ b/AngularChatroom/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Azure" : { 
+    "SignalR" : {
+      "Enabled": true,
+      "ConnectionString" : "Endpoint=https://skullgame.service.signalr.net;AccessKey=S3rSgcVpUXRFyR7kKd1QlilbeO//nodUrWx++b7kitA=;Version=1.0;"
+      }
+    }
 }
