--- a/AngularChatroom/appsettings.json
+++ b/AngularChatroom/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+"AllowedHosts": "*", 
+"Azure" : { 
+  "SignalR" : {
+    "Enabled": true,
+    "ConnectionString" : "Endpoint=https://skullgame.service.signalr.net;AccessKey=S3rSgcVpUXRFyR7kKd1QlilbeO//nodUrWx++b7kitA=;Version=1.0;"
+    }
+  }
 }
