Test commit for CI/CD pipeline

--- a/AngularChatroom/appsettings.Development.json
+++ b/AngularChatroom/appsettings.Development.json
@@ -9,7 +9,7 @@
   "Azure" : { 
     "SignalR" : {
       "Enabled": true,
-      "ConnectionString" : "Endpoint=https://skullgame.service.signalr.net;AccessKey=S3rSgcVpUXRFyR7kKd1QlilbeO//nodUrWx++b7kitA=;Version=1.0;"
+      "ConnectionString" : ""
       }
     }
 }
