Upgrade .Net and Nuget packages, better handling of developer environments

--- a/AngularChatroom/appsettings.Development.json
+++ b/AngularChatroom/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "Azure" : { 
     "SignalR" : {
-      "Enabled": true,
+      "Enabled": false,
       "ConnectionString" : ""
       }
     }
